kubernetes/apps/pig-ebank/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${var.app-name}
  labels:
    app: ${var.app-name}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${var.app-name}
  template:
    metadata:
      labels:
        app: ${var.app-name}
    spec:
      imagePullSecrets:
        - name: ghcr-login-secret
      containers:
      - name: ${var.app-name}
        image: ghcr.io/marklester/pig-ebank:main
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        volumeMounts: 
          - name: ${var.app-storage}
            mountPath: /data
      volumes: 
        - name: ${var.app-storage}
          persistentVolumeClaim:
            claimName: ${var.app-storage}
