kubernetes/apps/pig-ebank/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${var.app-name}
spec:
  type: ClusterIP
  selector:
    app: ${var.app-name}
  ports:
  - name: http
    port: 80
    targetPort: 8080
